# tradefly-django

./: .gitignore  Dockerfile  README.md  entrypoint.prod.sh  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
api/includes/: bitunix.py  gemini.py
api/migrations/: 0001_initial.py  0002_sigscandiscordsignal_sigscantakeprofittrade.py
django_project/: asgi.py  oldset  settings.old  settings.py  urls.py  views.py  wsgi.py
django_project/settings/: base.py  dev.py  prod.py
