[project]
name = "django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.16",
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
